testsuite/tests/indexed-types/should_fail/SimpleFail12.stderr

SimpleFail12.hs:8:15: error: [GHC-91510]
    • Illegal polymorphic type: forall a. [a]
    • In the type instance declaration for ‘C’
